Fix alignment of hero content with header & add styling
Adjust font styling for hero content and add placeholder image

--- a/style.css
+++ b/style.css
@@ -1,23 +1,59 @@
 body {
     font-family: Roboto, sans-serif;
     margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-.header {
+.container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    width: 100%;  /* Ensure it takes up the full width */
+}
+
+#header {
+    width: 100%;
     color: #F9FAF8;
     font-size: 24px;
     background-color: #1F2937;
-    margin: 0;
-    padding: 0;
+    display: flex;
+    justify-content: space-around; /* Assuming you meant space-between */
+    align-items: center;
+}
+
+.right-menu {
+    color: #F9FAF8;
+    font-size: 24px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.right-menu {
+.hero {
     display: flex;
-    
+    flex-direction: column;
+    /* Add a width here */
+    width: 30%; 
+
 }
+
+h1 {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+    margin-bottom: 0;
+}
+
+p {
+    display: flex;
+    flex-wrap: wrap;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+
 
 ul {
     list-style: none;
@@ -28,7 +64,32 @@ a {
     text-decoration: none;
     color: #E5E7EB;
     font-size: 18px;
+}
 
+.middle-container {
+    background-color: #1F2937;
+    display: flex;
+    align-items: center;
+    padding-left: 15%;
+    gap: 80px;
+    padding-top: 30px;
+}
 
+.image-placeholder {
+    display: flex;
+    flex-basis: auto; /* Reset to default */
+    width: 40%;
+    height: 220px;
+    background-color: #6D747D;    
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-color: #3882F6;
+    
 }
 
